<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_movies"
        android:icon="@drawable/movie"
        android:title="@string/movies"/>
    <item
        android:id="@+id/navigation_tv_series"
        android:icon="@drawable/live_tv"
        android:title="@string/tv_series"/>
    <item
        android:id="@+id/navigation_favourites"
        android:icon="@drawable/favourite_filled"
        android:title="@string/favourites"/>
</menu>