<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<item
    android:id="@+id/favorite_action"
    android:icon="@drawable/favourite_border"
    android:title="@string/favourite"
    app:showAsAction="always"/>
</menu>